--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://doks.netlify.app/"
+baseurl = "https://www.nathanalvarado.com"
 canonifyURLs = false
 disableAliases = true
 disableHugoGeneratorInject = true
@@ -8,6 +8,7 @@ enableRobotsTXT = true
 languageCode = "en-US"
 paginate = 7
 rssLimit = 10
+# ignoreErrors = ["image-not-found"]
 
 # Multilingual
 defaultContentLanguage = "en"
