--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -68,8 +68,8 @@ alertText = "Introducing the Doks child theme, several DX + UX updates, and more
 # Edit Page
 # repoHost [Github | Gitea | GitLab | Bitbucket | BitbucketServer ] is used for building the edit link based on git hoster
 repoHost = "GitHub"
-docsRepo = "https://github.com/NathanAlvarado/website-hugo"
-docsRepoBranch = "master"
+docsRepo = "https://github.com/NathanAlvarado/nathanalvarado.com"
+docsRepoBranch = "main"
 docsRepoSubPath = ""
 editPage = true
 lastMod = true
