Updated Doks to v0.5.0

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,10 +5,8 @@ disableHugoGeneratorInject = true
 enableEmoji = true
 enableGitInfo = false
 enableRobotsTXT = true
-languageCode = "en-US"
 paginate = 7
 rssLimit = 10
-# ignoreErrors = ["image-not-found"]
 
 # Multilingual
 defaultContentLanguage = "en"
@@ -60,6 +58,8 @@ rel  = "sitemap"
 
 [taxonomies]
   contributor = "contributors"
+  category = "categories"
+  tag = "tags"
 
 [permalinks]
   blog = "/blog/:title/"
@@ -67,6 +67,20 @@ rel  = "sitemap"
 
 [minify.tdewolff.html]
   keepWhitespace = false
+
+[related]
+  threshold = 80
+  includeNewer = true
+  toLower = false
+    [[related.indices]]
+    name = "categories"
+    weight = 100
+    [[related.indices]]
+    name = "tags"
+    weight = 80
+    [[related.indices]]
+    name = "date"
+    weight = 10
 
 [module]
   [module.hugoVersion]
@@ -80,6 +94,9 @@ rel  = "sitemap"
     source = "static"
     target = "static"
   [[module.mounts]]
+    source = "layouts"
+    target = "layouts"
+  [[module.mounts]]
     source = "node_modules/flexsearch"
     target = "assets/js/vendor/flexsearch"
   [[module.mounts]]
@@ -88,3 +105,6 @@ rel  = "sitemap"
   [[module.mounts]]
     source = "node_modules/mermaid"
     target = "assets/js/vendor/mermaid"
+  [[module.mounts]]
+    source = "node_modules/@hyas/images/layouts"
+    target = "layouts"
