--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,8 +3,8 @@
 ## Homepage
 title = "| N | T | A |"
 titleSeparator = "-"
-titleAddition = ""
-description = "Website for Nathan"
+titleAddition = "Nathan's Website"
+description = "A website for Nathan to use and others to see sometimes... if they want."
 
 ## Documentation
 # docsVersion = "0.3"
@@ -51,7 +51,18 @@ bgColor = "#fff"
 landscapePhotoWidths = [900, 800, 700, 600, 500]
 portraitPhotoWidths = [800, 700, 600, 500]
 lqipWidth = "20x"
-smallLimit = "360"
+smallLimit = "300"
+
+# Images
+imageResponsive = true
+imageConvertTo = "webp"
+imageImageSizes = ["480","720","1080","1280","1600","2048"]
+singleSize = false
+imageAddClass = "img-fluid lazyload blur-up"
+
+### Image template
+defaultImage = "default-image.png" # put in `./assets/images/`
+fillImage = "1270x740 Center" # normalize image size
 
 # Footer
 footer = "Powered by <a class=\"text-muted\" href=\"https://pages.cloudflare.com\">Cloudflare Pages</a>, <a class=\"text-muted\" href=\"https://gohugo.io/\">Hugo</a>, and <a class=\"text-muted\" href=\"https://getdoks.org/\">Doks</a>"
@@ -68,17 +79,23 @@ alertText = "Introducing the Doks child theme, several DX + UX updates, and more
 # Edit Page
 # repoHost [Github | Gitea | GitLab | Bitbucket | BitbucketServer ] is used for building the edit link based on git hoster
 repoHost = "GitHub"
+#repoHost = "Gitea"
 docsRepo = "https://github.com/NathanAlvarado/nathanalvarado.com"
 docsRepoBranch = "main"
 docsRepoSubPath = ""
-editPage = true
-lastMod = true
+editPage = false
+lastMod = false
+
+[sections]
+  sectionNav = ["docs", "guides"]
 
 [options]
   lazySizes = true
   clipBoard = true
   instantPage = true
   flexSearch = true
+  searchSectionsShow = []
+  searchSectionsIndex = []
   darkMode = true
   bootStrapJs = true
   breadCrumb = false
@@ -87,8 +104,11 @@ lastMod = true
   multilingualMode = false
   docsVersioning = false
   fullWidth = false
+  navbarSticky = true
+  toTopButton = false
+  scrollSpy = false # experimental; needs Bootstrap >= 5.2.0-beta1
 
 [menu]
   [menu.section]
     auto = true
-    collapsibleSidebar = false
+    collapsibleSidebar = true
